fix alignment issues

--- a/src/styles/profile_page_styles.css
+++ b/src/styles/profile_page_styles.css
@@ -8,6 +8,7 @@
     width: 400px;
     display: flex;
     flex-direction: column;
+    align-self: center;
 }
 
 .profileListsHeading {
